# LogSage-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml
logsage/: __init__.py  app.py  main.py
logsage/core/: __init__.py  format_detector.py  log_entry.py  log_parser.py
logsage/ui/: __init__.py  detail_view.py  log_view.py  stats_panel.py
tests/: __init__.py  test_format_detector.py  test_log_parser.py
