[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logsage-cli"
version = "1.0.0"
description = "🧙 Lightweight Terminal Log Intelligence Analysis Engine | 轻量级终端日志智能分析引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "LogSage Team", email = "logsage@example.com"}
]
keywords = ["log", "analyzer", "tui", "terminal", "cli", "viewer", "debugging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.85.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "aiohttp>=3.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "textual-dev>=1.0.0",
]

[project.scripts]
logsage = "logsage.main:main"

[project.urls]
Homepage = "https://github.com/gitstq/LogSage-CLI"
Repository = "https://github.com/gitstq/LogSage-CLI"
Issues = "https://github.com/gitstq/LogSage-CLI/issues"
Documentation = "https://github.com/gitstq/LogSage-CLI#readme"

[tool.hatch.build.targets.wheel]
packages = ["logsage"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
